add photos to the vr thing

--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -49,20 +49,22 @@
       <h2 class="recent-project-name">Recent Projects</h2>
 
       <div class="recent-project-container">
+
+        <a href="virtual_reality.html" class="recent-project-item border-highlight-four">
+          <div class = "project-img-container">
+            <img src="image/VR_trailer.jpg" class="recent-project-item-img" alt="VR trailer">
+          </div>
+          <div class="project-overlay"></div>
+          <div class="project-hover-text">
+            <p class="project-description">VR game trailer</p>
+          </div>
+        </a>
+
         <a href="community_poster.html" class="recent-project-item border-highlight-three">
           <img src="image/community_poster.jpg" class="recent-project-item-img" alt="community poster">
           <div class="project-overlay"></div>
           <div class="project-hover-text">
             <p class="project-description">community poster design</p>
-          </div>
-        </a>
-        <a href="taxidermy.html" class="recent-project-item border-highlight-one">
-          <div class = "project-img-container">
-            <img src="image/project_taxidermy.png" class="recent-project-item-img" alt="Videography:Taxidermy">
-          </div>
-          <div class="project-overlay"></div>
-          <div class="project-hover-text">
-            <p class="project-description">taxidermy documentary</p>
           </div>
         </a>
       </div>
