--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -68,21 +68,33 @@
 
     <p class="project-paragraph">Before diving into the videography part, the VR game development would be discussed briefly. This was my team’s first time developing a VR game using Oculus Rift. According to most of our members’ personal VR experiences, a lot of the games were experience based games. For instance, a roller coaster simulator game was played as a start up game for us during the class. Hence, the team thought it might be a good idea to build our game based on something real like a sport and add in more surprising features to excite the players. This was why we decided on the topic of building a golf game.</p>
 
+    <figure>
+      <img src="image/VR_user_testing.png" class="project-image" alt="a photo of our usr testing out the physics">
+      <figCaption>This is a photo of the team doing user research by observation. The main thing was to check whether the physics and the movement were smooth and natural enough.</figCaption>
+    </figure>
+
     <p class="project-paragraph"> After our ideation stage, my team wanted to create a golfing experience with the focus of having futuristic but beautifully made environment so that players can be more engaged with the experience. Instead of having to chase after the golf ball being hit, our programmers, Tamiko and Kenny thought it might be interesting to incorporate a teleportation mechanic for players to move around. This decision further minimized the chance of motion sickness of players. Nevertheless, our game strived to have a realistic physics, we conducted playtesting with the users. I made a rough draft of user testing questions and filmed the playtesting process to document the result. Through the process, my team found that due to the controller’s constraint, our players found it hard to map the controller to the real life golfing movement. Hence, I created a tutorial terrain in Unity with basic game mechanics features including teleportation, golf club respawn point and a camera playing the path of the golf ball. Lastly, I was also in charge of modelling some of the in game components in maya  including breakable crystal/rocks, cave and golf camera and looking for suitable pre-made models for the players to involve in the game.</p>
 
     <a href ="https://kennycheung388.wixsite.com/sonicthemouse" class="paragraph-in-text">
       Click here to see process documentation website </a>
 
+    <figure>
+      <img src="image/VR_tut.jpg" class="project-image" alt="a screenshot of the tutoral terrain">
+      <figCaption>This is a screenshot of the tutorial level that was modelled by me based on the user observation where the users felt confused by the controller constraints. This level was made to familiarize the users before getting into the actual experience.</figCaption>
+    </figure>
+    <figure>
+      <img src="image/VR_modelling.png" class="project-image" alt="a screenshot of the shattered crystal">
+      <figCaption>This is a screenshot of the in game object, glowing crystal that can be shattered when the user used the golf club to hit it. This object was interactive which increase the fun.</figCaption>
+    </figure>
+    <figure>
+      <img src="image/VR.png" class="project-image" alt="a screenshot of the crystal in the environment.">
+      <figCaption>A screenshot of the crystal in the environment.</figCaption>
+    </figure>
 
 
       <h2 class="project-section-title">Process</h2>
       <p class="project-paragraph">At almost the end of the semester, there were only 5 days left for us to film a VR game trailer that demonstrated the overall experience of the VR game we have been doing. I communicate with the team especially the programmers on what they wanted to showcase in the video. They considered it would be the best if the trailer could focus on the game mechanics and dynamics since they felt like showing the smooth physics that could been seen reflection of user feedback. In order to decrease the unpredictability and being able to film quickly, I outlined a simplified version of a shot list and a storyboard  for communication between the team mates.
       </p>
-
-      <figure>
-        <img src="image/team_meeting.jpg" class="project-image" alt="a photo of our very first team meeting">
-        <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
-      </figure>
 
       <h2 class="project-section-title">Challenge</h2>
       <p class="project-paragraph">However, due to the fact that the school computer that was powerful enough run the VR game could not install any external recording software, the team had to rely on the programmers to record in game footage using their home desktops since they knew the best on how to set up the unity project. I had to make sure they understood the shot list and everything was captured due to the time constraints through constant communication.</p>
