--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -99,10 +99,24 @@
       <h2 class="project-section-title">Challenge</h2>
       <p class="project-paragraph">However, due to the fact that the school computer that was powerful enough run the VR game could not install any external recording software, the team had to rely on the programmers to record in game footage using their home desktops since they knew the best on how to set up the unity project. I had to make sure they understood the shot list and everything was captured due to the time constraints through constant communication.</p>
 
+      <figure>
+        <img src="image/VR_editing.png" class="project-image" alt="a screenshot of the me doing eidting and try to fix the footage">
+        <figCaption>A screenshot of me editing.</figCaption>
+      </figure>
+
       <p class="project-paragraph">Furthermore, on the filming outline, I considered it might be a good idea to feature user experience  in the trailer. Hence, I decided to film during the final showcase. The challenge here was that every team member was occupied by other tasks and this meant that I became the only person in charge of filming. It was actually difficult to manage everything at the same time with the presence of our guest players. Nevertheless, in order to minimize the chaos, I planned out beforehand on where to set up the camera and how i was going to film close-up shot to the players. Things turnt out under control during the showcase. </p>
 
+      <figure>
+        <img src="image/VR_event_planning.png" class="project-image" alt="a screenshot of the event planning">
+        <figCaption>An image of the location planning. I planned out how the guest players would move through the showcase booth and place the cameras at approprate locations.</figCaption>
+      </figure>
+      <figure>
+        <img src="image/VR_filming.png" class="project-image" alt="a screenshot of the the close up shot I captured">
+        <figCaption>An image of the close up shot I captured during the showcase. Because of the showcase planning, I was able to move around easily. </figCaption>
+      </figure>
+
       <h2 class="project-section-title">Reflection</h2>
-      <p class="project-paragraph">At the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer being produced engaged many other guests and friends who were not able to play our game. The trailer was embedded in our team website and our VR experience was also being introduced on <a href="https://bc.ctvnews.ca/video?clipId=1373354">CBC news</a> to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to maintain a better quality of the work. </p>
+      <p class="project-paragraph">At the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer being produced engaged many other guests and friends who were not able to play our game. The trailer was embedded in our team website and our VR experience was also being introduced on <a href="https://bc.ctvnews.ca/video?clipId=1373354">CBC news</a> to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to achieve quality work. </p>
     </section>
 
 
