community page done

--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -117,7 +117,13 @@
 
       <h2 class="project-section-title">Reflection</h2>
       <p class="project-paragraph">At the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer being produced engaged many other guests and friends who were not able to play our game. The trailer was embedded in our team website and our VR experience was also being introduced on <a href="https://bc.ctvnews.ca/video?clipId=1373354">CBC news</a> to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to achieve quality work. </p>
+
+      <figure>
+        <img src="image/VR_group.jpg" class="project-image" alt="group photo">
+        <figCaption>Group photo</figCaption>
+      </figure>
     </section>
+
 
 
     <footer>
