--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -59,18 +59,14 @@
     <h2 class="project-section-title">Process</h2>
     <p class="project-paragraph">The target audience were mainly preteen and young teenager. I conducted some quick search online on what other designers did when they wanted draw their attention to the poster. It turnt out most of the posters were bright and colourful that highlighted positive vibe which was important to this community event since we wanted newcomer children to have great connections and experiences with the neighbourhood house.</p>
 
-    <figure>
-      <img src="image/brainstorm.png" class="project-image" alt="brainstorming image">
-      <figCaption>A photo of the brainstorming process with most team members voting on the game idea.</figCaption>
-    </figure>
-
     <p class="project-paragraph">Being influenced and inspired greatly by Paul Rand, I also did research on his style again to see how he handled elements and arranged them playfully. Afterwards, I started sketching and tested out vibrant colour scheme for this specific audience. Sketches were then being brought into Illustrator.</p>
 
-    <p class="project-paragraph">I typically worked from home and the main communication method between the program coordinator and me was usually through emails since she was very busy and seldom had time to discuss in person. In order to communicate effectively about my design progress and decisions clearly, I often would include quick sketches or image files that highlight main design stages that the coordinator could look at and give me feedback. This form of communication demonstrate how I was able to explain my design ideas to a lay audience and able to negotiate and plan the process. </p>
     <figure>
-      <img src="image/gameMode.png" class="project-image" alt="game interface image">
-      <figCaption>A rough mockup of our imaginative game interface offering options for all students to interact and engage with school events.</figCaption>
+      <img src="image/community_sketch.jpg" class="project-image" alt="brainstorming image">
+      <figCaption>A photo of the brainstorming sketches that wanted to highlight the idea of the community is a friendly new homw for the newcomers.</figCaption>
     </figure>
+
+    <p class="project-paragraph">I typically worked from home and the main communication method between the program coordinator and me was usually through emails since she was very busy and seldom had time to discuss in person. In order to communicate effectively about my design progress and decisions clearly, I often would include quick sketches or image files that highlight main design stages that the coordinator could look at and give me feedback. This form of communication demonstrate how I was able to explain my design ideas to a lay audience and able to negotiate and plan the process. </p>
 
     <h2 class="project-section-title">Challenges</h2>
     <p class="project-paragraph">Audience typically did not spend much time on a poster for too long; however the amount of the information that the coordinator gave me was a lot. In order to make a concise poster for the audience to quickly understand what this poster was about, I contacted the coordinator and discussed with her about the idea of shorten the information. I also made an effort in strategizing the content and highlight them with hierarchy on poster.
@@ -78,15 +74,21 @@
 
     <p class="project-paragraph">Moreover, since the event was sponsored by the government, every poster that I created should include several government logos on it. Unfortunately, the image files that the coordinator provided me were in jpg file with a white background and low resolution. Thus, it was difficult to remove the clean the image file perfectly. As results, I left white spaces at the bottom of the poster to make the sponsored logo stand out as a solution coping with low resolution image issue. </p>
 
-    <h2 class="project-section-title ">Reflection</h2>
-    <p class="project-paragraph">At the end, the poster was printed and posted in the neighbourhood and Anne Hebert Annex School to attract people to come. Because of this poster project’s success, other community program coordinators had asked me to help with their project promotions, including the career exploration day for the near Van Tech Secondary School. At the end of the year, I was awarded with a certificate of recognition from the House of Common.</p>
-
     <figure>
-      <img src="image/communityFeedback.jpg" class="project-image" alt="a photo of the community feedback session">
-      <figCaption>A group photo during the community feedback session where industrial people and successful entrepreneurs came to give further suggestions on our proposal.</figCaption>
+      <img src="image/community_overloaded_info.png" class="project-image" alt="first draft">
+      <figCaption>A screenshot of the first draft with too much infomation and low-resolution logos. In order to refine these issues, I negotiated the content with the coordinator and arrange the logo underneath the poster with a white background to increase legiblity.</figCaption>
     </figure>
 
-    <p class="project-paragraph">I had learnt from this volunteer experience is that I should try to compile an image or design folders for the future design volunteers or even the program coordinator so that they did not have to deal with low-resolution image files and limited amount of photo archives. I believe if I did this at the time, it could save us more time on looking for the right images that related to the events.</p>
+    <h2 class="project-section-title ">Reflection</h2>
+
+    <figure>
+      <img src="image/community_final.png" class="project-image" alt="final version">
+      <figCaption>A screenshot of the final photo with more spaces for the audeince to breathe.</figCaption>
+    </figure>
+
+    <p class="project-paragraph">At the end, the poster was printed and posted in the neighbourhood and Anne Hebert Annex School to attract people to come. Because of this poster project’s success, other community program coordinators had asked me to help with their project promotions, including the career exploration day for the near Van Tech Secondary School. At the end of the year, I was awarded with a certificate of recognition from the House of Common.</p>
+
+    <p class="project-paragraph"> Nevertheless, I felt like I should try to compile an image or design folders for the future design volunteers or even the program coordinator so that they did not have to deal with low-resolution image files and limited amount of photo archives. I believe if I did this at the time, it could save us more time on looking for the right images that related to the events.</p>
   </section>
   <footer>
     <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
