change community content

--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -48,7 +48,7 @@
   <section>
     <h2  class="project-section-title first-paragraph first-title">Overview</h2>
     <h3  class="project-paragraph in-para-overview-title">Goal</h3>
-    <p class="project-paragraph ">Design a poster for new immigrant family and international students welcome event in Frog Hollow Neighbourhood House.</p>
+    <p class="project-paragraph ">Design a event poster for new immigrant family and their children in Frog Hollow Neighbourhood House.</p>
     <h3 class="project-paragraph in-para-overview-title">Time</h3>
     <p class="project-paragraph ">3 weeks</p>
 
