--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -33,7 +33,7 @@
     <div class="short-intro-container">
       <div class="short-intro-item">
         <h1 class="chinese-name intro-title" lang="zh-Hant">Hello! 你好!</h1>
-        <p class="intro-description">This is Jar Hsuan Wang or Sherry Wang who is an enthusiastic Taiwanese born <em class="intro-emphasis">visual designer and videographer</em> living in Vanvouver, Canada. </p>
+        <p class="intro-description">My name is Jar Hsuan Wang or Sherry Wang and I am an enthusiastic Taiwanese born <em class="intro-emphasis">print designer and videographer</em> living in Vancouver, Canada. </p>
       </div>
     </div>
     <div>
