landing page img

--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <nav>
+  <nav id="homeNav">
     <ul class="nav-container">
       <li  class="nav-logo"><a href="portfolio.html" class="nav-logo-item on-page-home nav-link">Jar Hsuan Wang</a> </li>
 
@@ -30,17 +30,19 @@
   </nav>
 
   <section>
-    <div class="short-intro-container">
+    <!-- <div class="short-intro-container">
       <div class="short-intro-item">
         <h1 class="chinese-name intro-title" lang="zh-Hant">Hello! 你好!</h1>
         <p class="intro-description">My name is Jar Hsuan Wang or Sherry Wang and I am an enthusiastic Taiwanese born <em class="intro-emphasis">print designer and videographer</em> living in Vancouver, Canada. </p>
       </div>
-    </div>
+    </div> -->
     <div>
       <img src="image/small_decoration.png" id="small-decoration" alt="decoration image representing me as a content strategist.">
+        <!-- <div class="landing-item"> <img src="image/landingpg-01.png" class="landing-item intro-img" id= "big-intro" alt="decoration pic."></div>
+        <div class="landing-item"><img src="image/landingpg-02.png" class="intro-img" alt="decoration pic."></div> -->
     </div>
     <div>
-      <img src="image/decoration.png" id="big-decoration" alt="decoration image representing me as a content strategist.">
+      <img src="image/landingpg-03.png" id="big-decoration" alt="decoration image representing me as a content strategist.">
     </div>
   </section>
 
