--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -24,7 +24,7 @@
     <ul class="nav-container">
       <li  class="nav-logo"><a href="portfolio.html" class="nav-logo-item on-page-home nav-link">Jar Hsuan Wang</a> </li>
 
-      <li><a class="main-nav-accent-one nav-link" href="about.html">ABOUT ME</a></li>
+      <li><a class="main-nav-accent-one nav-link" href="about.html">ABOUT</a></li>
       <li><a class="main-nav-accent-two nav-link" href="project_display.html">PROJECTS</a></li>
     </ul>
   </nav>
@@ -37,12 +37,12 @@
       </div>
     </div> -->
     <div>
-      <img src="image/small_decoration.png" id="small-decoration" alt="decoration image representing me as a content strategist.">
+      <img src="image/landingpg-01.png" id="small-decoration" alt="decoration image representing me as a content strategist.">
         <!-- <div class="landing-item"> <img src="image/landingpg-01.png" class="landing-item intro-img" id= "big-intro" alt="decoration pic."></div>
         <div class="landing-item"><img src="image/landingpg-02.png" class="intro-img" alt="decoration pic."></div> -->
     </div>
     <div>
-      <img src="image/landingpg-03.png" id="big-decoration" alt="decoration image representing me as a content strategist.">
+      <img src="image/landingpg-02.png" id="big-decoration" alt="decoration image representing me as a content strategist.">
     </div>
   </section>
 
