--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -23,8 +23,8 @@
     <ul class="nav-container">
       <li  class="nav-logo"><a href="portfolio.html" class="nav-logo-item nav-link">Jar Hsuan Wang</a> </li>
 
-      <li><a class="main-nav-accent-one nav-link" href="about.html">ABOUT ME</a></li>
-      <li><a class="main-nav-accent-two nav-link" href="project_display.html">PROJECTS</a></li>
+      <li><a class="main-nav-accent-one nav-link" href="about.html">ABOUT</a></li>
+      <li><a class="main-nav-accent-two nav-link" href="project_display.html">PROJECT</a></li>
     </ul>
   </nav>
 
