--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -25,7 +25,7 @@
       <li  class="nav-logo"><a href="portfolio.html" class="nav-logo-item on-page-home nav-link">Jar Hsuan Wang</a> </li>
 
       <li><a class="main-nav-accent-one nav-link" href="about.html">ABOUT</a></li>
-      <li><a class="main-nav-accent-two nav-link" href="project_display.html">PROJECTS</a></li>
+      <li><a class="main-nav-accent-two nav-link" href="project_display.html">PROJECT</a></li>
     </ul>
   </nav>
 
