--- a/portfolio/jhw_portfolio/taxidermy.html
+++ b/portfolio/jhw_portfolio/taxidermy.html
@@ -33,7 +33,7 @@
 
       <div class= "overview-vid-item">
         <h1 class="project-title-vid">&rsaquo; Videography </h1>
-        <h2 class="project-name-vid overview-accent-color-one">Taxidermy</h2>
+        <h2 class="project-name-vid overview-accent-color-one">Knowledge Through Taxidermy (3:54)</h2>
         <h3 class="overview-subtitle">Role</h3>
         <p  class="overview-description">content strategist, storyboarding artist and graphic designer</p>
       </div>
@@ -60,21 +60,29 @@
     <h2 class="project-section-title">Brief</h2>
     <p class="project-paragraph first-paragraph">This was a school project for IAT 344, “Moving Images” where students were assigned to collaborate with real world clients and help them produce documentaries. Our group chose to work with the Museum of Vancouver. </p>
 
-    <p class="project-paragraph"><em>The Wild Things</em> will be on display in late 2018 and will illustrate the positive relationship between human, technology and nature. After listening to the museum’s proposed concept, my team were interested in the opportunity to document the historical and cultural relationships between human and nature. Thus, we decided to film a documentary project on this topic. </p>
+    <p class="project-paragraph"><em>The Wild Things</em> is on display starting summer, 2018 to 2020 and it illustrates the positive relationship between human, technology and nature. After listening to the museum’s proposed concept, my team were interested in the opportunity to document the historical and cultural relationships between human and nature. Thus, we decided to film a documentary project on this topic. </p>
 
     <h2 class="project-section-title">Process</h2>
-    <p class="project-paragraph">Different from a scripted film, making a documentary requires a lot more planning due to the unpredictability of the filming location and content. In order to minimize the uncertainty, my team decided to schedule a museum tour to get familiarize what could be our centre of attention. Before visiting the museum, I led my team in a brainstorming process where we created a set of moodboards, possible documentary composition, pre-production questions and colour palettes that could prepare us to envision the story messages and goals. The idea of “the coexistence of both nature and urbanization” came into mind at this stage of the process which led us to have more spaces to discuss with the museum. </p>
+
+    <figure class="big-project-img">
+      <img src="image/taxidermyTL-01.png" class="project-image" alt="a photo of our very first team meeting">
+      <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
+    </figure>
+
+    <figure class=" small-project-img">
+      <img src="image/taxidermyTL-02.png" class="project-image" alt="a photo of our very first team meeting">
+      <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
+    </figure>
+
+    <p class="project-paragraph">Different from a scripted film, making a documentary requires a lot more planning due to the unpredictability of the filming location and content. Hence, a museum location visit was scheduled. Before visiting the museum, I led my team to brainstorm to prepare a set of mood boards, possible documentary composition, pre-production questions and colour palettes that could prepare us to envision the story messages and goals.</p>
 
     <figure>
       <img src="image/team_meeting.jpg" class="project-image" alt="a photo of our very first team meeting">
       <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
     </figure>
 
-    <p class="project-paragraph">After visiting the museum and meeting with the museum curator, Viviane Gosslin, we were assigned taxidermy as a topic, due to the fact that there are fewer taxidermists than in the past. Thus,it would be valuable to document how people used to connect themselves to the nature and how taxidermy could be important in modern day context. In order to capture the positive message that the museum wanted us to portray, I led the group in creating guiding  questions for our upcoming interviews. How these questions were significant was that they helped us to form a cohesive message later on. At this stage, my team developed an overall message of an introduction to taxidermy and its values. </p>
+    <p class="project-paragraph">After visiting the museum and meeting with the museum curator, Viviane Gosslin, we were assigned taxidermy as a topic. Thus, my team refined the filming direction towards capturing the positive relationship between human and taxidermy. I led the group again in creating guiding questions and doing storyboarding for our upcoming interviews. By doing this, it helped my team to understand how we could set up the equipment quickly and film the subjects with purposes. At this stage, my team developed an overall message of an introduction to taxidermy and its values.</p>
 
-    <p class="project-paragraph">Moreover after my team had determined our list of questions, I began storyboarding our documentary. By doing this, it helped my team to understand how we could set up the equipment quickly and film the subjects with purposes. Since on the storyboard, there were annotation that reminded each of us to capture artefacts that could help building our topic. After the pre-production preparation, we then went to the museum to film. </p>
-
-    <p class="project-paragraph">Since the museum could only offer us up to 3 hours for filming in their storage room, we were only able to gather our footage into a rough cut during our first filming. Given our lack of footage, we request a second shooting time with the museum. I provided our shooting plan, consisting of potential artifacts that we could use to convey our desired message. I also provided our list of equipment that would help enhance the flow and composition of our film. In order to prevent accidents and uncertainty, I studied and practiced how to use the new equipment beforehand and coached the team to use them. </p>
 
     <figure>
       <img src="image/bw_note.png" class="project-image" alt="a photo of my shot list">
