VR content update

--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -66,6 +66,17 @@
     <p class="project-paragraph first-paragraph">This project was assigned in the course, <em>Immersive Environment</em> in which the student had to develop a virtual experience using the VR platform for the audience to feel a sense of high presence and engagement. Within this specific game project, one of my main roles was the videographer so that our VR experience can be documented for promoting VR technology.
     </p>
 
+    <figure class="big-project-img">
+      <img src="image/vrTL-01.png" class="project-image" alt="a photo of our very first team meeting">
+      <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
+    </figure>
+
+    <figure class=" small-project-img">
+      <img src="image/vrTL-02.png" class="project-image" alt="a photo of our very first team meeting">
+      <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
+    </figure>
+
+
     <p class="project-paragraph">Before diving into the videography part, the VR game development would be discussed briefly. This was my team’s first time developing a VR game using Oculus Rift. According to most of our members’ personal VR experiences, a lot of the games were experience based games. For instance, a roller coaster simulator game was played as a start up game for us during the class. Hence, the team thought it might be a good idea to build our game based on something real like a sport and add in more surprising features to excite the players. This was why we decided on the topic of building a golf game.</p>
 
     <figure>
