--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -53,42 +53,41 @@
     <p class="project-paragraph ">3 weeks</p>
 
     <h2 class="project-section-title">Brief</h2>
-    <p class="project-paragraph first-paragraph">As an immigrant myself, I have strived to engage and assist new immigrants as well as international students. Thus, I volunteered at Frog Hollow Neighbourhood House which had several newcomer assistance programs that constantly hold community activities and events to involve them into the neighbourhood. Within the volunteer team, I mainly worked for their preteen and youth program and I would like to highlight the poster design for main summer community event.</p>
+    <p class="project-paragraph first-paragraph">As an immigrant myself, I have strived to engage and assist new immigrants as well as international students. Thus, I volunteered at Frog Hollow Neighbourhood House which had several newcomer assistance programs that constantly hold community activities and events to involve them in the neighbourhood. Within the volunteer team, I mainly worked for their preteen and youth program and I would like to highlight the poster design for main summer community event.</p>
 
 
-    <h2 class="project-section-title">Process</h2>
-    <p class="project-paragraph">The target audience were mainly preteen and young teenager. I conducted some quick search online on what other designers did when they wanted draw their attention to the poster. It turnt out most of the posters were bright and colourful that highlighted positive vibe which was important to this community event since we wanted newcomer children to have great connections and experiences with the neighbourhood house.</p>
-
-    <p class="project-paragraph">Being influenced and inspired greatly by Paul Rand, I also did research on his style again to see how he handled elements and arranged them playfully. Afterwards, I started sketching and tested out vibrant colour scheme for this specific audience. Sketches were then being brought into Illustrator.</p>
+    <h2 class="project-section-title">Audience</h2>
+    <p class="project-paragraph">The target audience was mainly preteen and young teenager. I conducted some quick search on what other designers did when they approached this audience base. Being influenced and inspired greatly by Paul Rand, I also did research on his style again to see how he handled elements and arranged them playfully. Afterwards, I started sketching and tested out a vibrant colour scheme for this specific audience. Sketches were then being brought into Illustrator.</p>
 
     <figure>
       <img src="image/community_sketch.jpg" class="project-image" alt="brainstorming image">
       <figCaption>A photo of the brainstorming sketches that wanted to highlight the idea of the community is a friendly new homw for the newcomers.</figCaption>
     </figure>
 
-    <p class="project-paragraph">I typically worked from home and the main communication method between the program coordinator and me was usually through emails since she was very busy and seldom had time to discuss in person. In order to communicate effectively about my design progress and decisions clearly, I often would include quick sketches or image files that highlight main design stages that the coordinator could look at and give me feedback. This form of communication demonstrate how I was able to explain my design ideas to a lay audience and able to negotiate and plan the process. </p>
+    <h2 class="project-section-title">Content Structure and Communication</h2>
+    <p class="project-paragraph">Tha primary communication method between my coordinator and me was through email. In order to clearly deliver my ideas, I attached design documents with my explanation in emails. This demonstrated that I was able to describe my decision to a lay audience.  </p>
 
-    <h2 class="project-section-title">Challenges</h2>
-    <p class="project-paragraph">Audience typically did not spend much time on a poster for too long; however the amount of the information that the coordinator gave me was a lot. In order to make a concise poster for the audience to quickly understand what this poster was about, I contacted the coordinator and discussed with her about the idea of shorten the information. I also made an effort in strategizing the content and highlight them with hierarchy on poster.
-    </p>
-
-    <p class="project-paragraph">Moreover, since the event was sponsored by the government, every poster that I created should include several government logos on it. Unfortunately, the image files that the coordinator provided me were in jpg file with a white background and low resolution. Thus, it was difficult to remove the clean the image file perfectly. As results, I left white spaces at the bottom of the poster to make the sponsored logo stand out as a solution coping with low resolution image issue. </p>
+    <p class="project-paragraph">Moreover, the audience did not spend much time on a poster; however, the information that was assigned was a lot. In order to structure the information concisely,  I discussed with the coordinator the idea of shortening the information. I made an effort in strategizing the content and highlight them with the hierarchy on the poster. </p>
 
     <figure>
       <img src="image/community_overloaded_info.png" class="project-image" alt="first draft">
-      <figCaption>A screenshot of the first draft with too much infomation and low-resolution logos. In order to refine these issues, I negotiated the content with the coordinator and arrange the logo underneath the poster with a white background to increase legiblity.</figCaption>
+      <figCaption>The first draft with too much infomation and low-resolution logos.Since the community centre was near the location that this poster was going to be posted, I suggested removing the address.  </figCaption>
     </figure>
+
+<h2 class="project-section-title">Low-Resolution Image</h2>
+    <p class="project-paragraph">Since the event was sponsored by the government, every poster should include several government logos on it. Unfortunately, the image files provided were in jpg file with low-resolution. Thus, it was difficult to clean the image file perfectly even if I removed the background and sharpened the logos. As results, I left white spaces at the bottom of the poster to make the sponsored logo stand out as a solution.</p>
+
 
     <h2 class="project-section-title ">Reflection</h2>
 
     <figure>
       <img src="image/community_final.png" class="project-image" alt="final version">
-      <figCaption>A screenshot of the final photo with more spaces for the audeince to breathe.</figCaption>
+      <figCaption>A screenshot of the final photo with more negative spaces for the audeince to breathe.</figCaption>
     </figure>
 
-    <p class="project-paragraph">At the end, the poster was printed and posted in the neighbourhood and Anne Hebert Annex School to attract people to come. Because of this poster project’s success, other community program coordinators had asked me to help with their project promotions, including the career exploration day for the near Van Tech Secondary School. At the end of the year, I was awarded with a certificate of recognition from the House of Common.</p>
+    <p class="project-paragraph">In the end, the poster was printed and posted in Anne Hebert Annex School. Because of this poster project’s success, other community program coordinators had asked me to help with their project promotions, including the career exploration day for the near Van Tech Secondary School. At the end of the year, I was awarded a certificate of recognition from the House of Common.</p>
 
-    <p class="project-paragraph"> Nevertheless, I felt like I should try to compile an image or design folders for the future design volunteers or even the program coordinator so that they did not have to deal with low-resolution image files and limited amount of photo archives. I believe if I did this at the time, it could save us more time on looking for the right images that related to the events.</p>
+    <p class="project-paragraph"> Nevertheless, I felt like I should try to compile an image or design folders for the future design volunteers so that they did not struggle over the image archives. I believe if I did this at the time, it could save us more time.</p>
   </section>
   <footer>
     <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
