--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -77,69 +77,70 @@
     </figure>
 
 
-    <p class="project-paragraph">Before diving into the videography part, the VR game development would be discussed briefly. This was my team’s first time developing a VR game using Oculus Rift. According to most of our members’ personal VR experiences, a lot of the games were experience based games. For instance, a roller coaster simulator game was played as a start up game for us during the class. Hence, the team thought it might be a good idea to build our game based on something real like a sport and add in more surprising features to excite the players. This was why we decided on the topic of building a golf game.</p>
+    <p class="project-paragraph">After our ideation stage, my team wanted to create a golfing experience with the focus on having a futuristic but beautifully made environment so that players can be more engaged with the experience. And I volunteered to do the trailer portion that would help to highlight the major game mechanics and features.</p>
 
-    <figure>
-      <img src="image/VR_user_testing.png" class="project-image" alt="a photo of our usr testing out the physics">
-      <figCaption>This is a photo of the team doing user research by observation. The main thing was to check whether the physics and the movement were smooth and natural enough.</figCaption>
-    </figure>
+    <!-- <figure>
+    <img src="image/VR_user_testing.png" class="project-image" alt="a photo of our usr testing out the physics">
+    <figCaption>This is a photo of the team doing user research by observation. The main thing was to check whether the physics and the movement were smooth and natural enough.</figCaption>
+  </figure> -->
 
-    <p class="project-paragraph"> After our ideation stage, my team wanted to create a golfing experience with the focus of having futuristic but beautifully made environment so that players can be more engaged with the experience. Instead of having to chase after the golf ball being hit, our programmers, Tamiko and Kenny thought it might be interesting to incorporate a teleportation mechanic for players to move around. This decision further minimized the chance of motion sickness of players. Nevertheless, our game strived to have a realistic physics, we conducted playtesting with the users. I made a rough draft of user testing questions and filmed the playtesting process to document the result. Through the process, my team found that due to the controller’s constraint, our players found it hard to map the controller to the real life golfing movement. Hence, I created a tutorial terrain in Unity with basic game mechanics features including teleportation, golf club respawn point and a camera playing the path of the golf ball. Lastly, I was also in charge of modelling some of the in game components in maya  including breakable crystal/rocks, cave and golf camera and looking for suitable pre-made models for the players to involve in the game.</p>
+  <!-- <p class="project-paragraph"> After our ideation stage, my team wanted to create a golfing experience with the focus of having futuristic but beautifully made environment so that players can be more engaged with the experience. Instead of having to chase after the golf ball being hit, our programmers, Tamiko and Kenny thought it might be interesting to incorporate a teleportation mechanic for players to move around. This decision further minimized the chance of motion sickness of players. Nevertheless, our game strived to have a realistic physics, we conducted playtesting with the users. I made a rough draft of user testing questions and filmed the playtesting process to document the result. Through the process, my team found that due to the controller’s constraint, our players found it hard to map the controller to the real life golfing movement. Hence, I created a tutorial terrain in Unity with basic game mechanics features including teleportation, golf club respawn point and a camera playing the path of the golf ball. Lastly, I was also in charge of modelling some of the in game components in maya  including breakable crystal/rocks, cave and golf camera and looking for suitable pre-made models for the players to involve in the game.</p> -->
 
-    <a href ="https://kennycheung388.wixsite.com/sonicthemouse" class="paragraph-in-text">
-      Click here to see process documentation website </a>
+  <a href ="https://kennycheung388.wixsite.com/sonicthemouse" class="paragraph-in-text">
+    Click here to see process documentation website </a>
 
-    <figure>
-      <img src="image/VR_tut.jpg" class="project-image" alt="a screenshot of the tutoral terrain">
-      <figCaption>This is a screenshot of the tutorial level that was modelled by me based on the user observation where the users felt confused by the controller constraints. This level was made to familiarize the users before getting into the actual experience.</figCaption>
-    </figure>
-    <figure>
-      <img src="image/VR_modelling.png" class="project-image" alt="a screenshot of the shattered crystal">
-      <figCaption>This is a screenshot of the in game object, glowing crystal that can be shattered when the user used the golf club to hit it. This object was interactive which increase the fun.</figCaption>
-    </figure>
-    <figure>
-      <img src="image/VR.png" class="project-image" alt="a screenshot of the crystal in the environment.">
-      <figCaption>A screenshot of the crystal in the environment.</figCaption>
-    </figure>
-
-
-      <h2 class="project-section-title">Process</h2>
-      <p class="project-paragraph">At almost the end of the semester, there were only 5 days left for us to film a VR game trailer that demonstrated the overall experience of the VR game we have been doing. I communicate with the team especially the programmers on what they wanted to showcase in the video. They considered it would be the best if the trailer could focus on the game mechanics and dynamics since they felt like showing the smooth physics that could been seen reflection of user feedback. In order to decrease the unpredictability and being able to film quickly, I outlined a simplified version of a shot list and a storyboard  for communication between the team mates.
-      </p>
-
-      <h2 class="project-section-title">Challenge</h2>
-      <p class="project-paragraph">However, due to the fact that the school computer that was powerful enough run the VR game could not install any external recording software, the team had to rely on the programmers to record in game footage using their home desktops since they knew the best on how to set up the unity project. I had to make sure they understood the shot list and everything was captured due to the time constraints through constant communication.</p>
-
-      <figure>
-        <img src="image/VR_editing.png" class="project-image" alt="a screenshot of the me doing eidting and try to fix the footage">
-        <figCaption>A screenshot of me editing.</figCaption>
-      </figure>
-
-      <p class="project-paragraph">Furthermore, on the filming outline, I considered it might be a good idea to feature user experience  in the trailer. Hence, I decided to film during the final showcase. The challenge here was that every team member was occupied by other tasks and this meant that I became the only person in charge of filming. It was actually difficult to manage everything at the same time with the presence of our guest players. Nevertheless, in order to minimize the chaos, I planned out beforehand on where to set up the camera and how i was going to film close-up shot to the players. Things turnt out under control during the showcase. </p>
-
-      <figure>
-        <img src="image/VR_event_planning.png" class="project-image" alt="a screenshot of the event planning">
-        <figCaption>An image of the location planning. I planned out how the guest players would move through the showcase booth and place the cameras at approprate locations.</figCaption>
-      </figure>
-      <figure>
-        <img src="image/VR_filming.png" class="project-image" alt="a screenshot of the the close up shot I captured">
-        <figCaption>An image of the close up shot I captured during the showcase. Because of the showcase planning, I was able to move around easily. </figCaption>
-      </figure>
-
-      <h2 class="project-section-title">Reflection</h2>
-      <p class="project-paragraph">At the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer being produced engaged many other guests and friends who were not able to play our game. The trailer was embedded in our team website and our VR experience was also being introduced on <a href="https://bc.ctvnews.ca/video?clipId=1373354">CBC news</a> to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to achieve quality work. </p>
-
-      <figure>
-        <img src="image/VR_group.jpg" class="project-image" alt="group photo">
-        <figCaption>Group photo</figCaption>
-      </figure>
-    </section>
+    <!-- <figure>
+    <img src="image/VR_tut.jpg" class="project-image" alt="a screenshot of the tutoral terrain">
+    <figCaption>This is a screenshot of the tutorial level that was modelled by me based on the user observation where the users felt confused by the controller constraints. This level was made to familiarize the users before getting into the actual experience.</figCaption>
+  </figure>
+  <figure>
+  <img src="image/VR_modelling.png" class="project-image" alt="a screenshot of the shattered crystal">
+  <figCaption>This is a screenshot of the in game object, glowing crystal that can be shattered when the user used the golf club to hit it. This object was interactive which increase the fun.</figCaption>
+</figure>
+<figure>
+<img src="image/VR.png" class="project-image" alt="a screenshot of the crystal in the environment.">
+<figCaption>A screenshot of the crystal in the environment.</figCaption>
+</figure> -->
 
 
+<h2 class="project-section-title">Process</h2>
+<p class="project-paragraph">At almost the end of the project, there were only 5 days left for us to film a VR game trailer that demonstrated the overall experience.   I led a team discussion to discuss with the programmers on what features would be essential that had to be showcased.  They considered it would be the best if the trailer could focus on the game mechanics and dynamics since our game focused on smooth physics. In order to decrease the unpredictability and being able to film quickly, I outlined a simplified version of a shot list and a storyboard for myself.
+</p>
 
-    <footer>
-      <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
-    </footer>
+<h2 class="project-section-title">Challenge</h2>
+<p class="project-paragraph">However, due to the fact that the school computer that was powerful enough to run the VR game could not install any external recording software, my team had to rely on home desktops to record in-game footage. I asked our programmers to record the play-through since they knew how to set up the unity project efficiently. Meaningful communication was so important at this stage due to the time constraint. </p>
 
-  </body>
-  </html>
+<p class="project-paragraph">
+  Furthermore, I wanted to feature guest player footage in the trailer. Hence, the final showcase was included. The challenge was that every team member was occupied by other tasks and this meant that only me was able to film. It was difficult to manage everything at the same time with the presence of our guest players. Nevertheless, in order to minimize the chaos, I planned out beforehand Things turned out under control during the showcase.</p>
+
+  <figure>
+    <img src="image/VR_event_planning.png" class="project-image" alt="a screenshot of the event planning">
+    <figCaption>An image of the location planning. I planned out how the guest players would move through the showcase booth and place the cameras at approprate locations.</figCaption>
+  </figure>
+  <figure>
+    <img src="image/VR_filming.png" class="project-image" alt="a screenshot of the the close up shot I captured">
+    <figCaption>An image of the close up shot I captured during the showcase. Because of the showcase planning, I was able to move around easily. </figCaption>
+  </figure>
+
+  <h2 class="project-section-title">Reflection</h2>
+  <figure>
+    <img src="image/VR_editing.png" class="project-image" alt="a screenshot of the me doing eidting and try to fix the footage">
+    <figCaption>A screenshot of me editing.</figCaption>
+  </figure>
+  
+  <p class="project-paragraph">In the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer was embedded in our team website and our VR experience was also being introduced on <a href="https://bc.ctvnews.ca/video?clipId=1373354">CBC news</a> to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to achieve quality work. </p>
+
+  <figure>
+    <img src="image/VR_group.jpg" class="project-image" alt="group photo">
+    <figCaption>Group photo</figCaption>
+  </figure>
+</section>
+
+
+
+<footer>
+  <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
+</footer>
+
+</body>
+</html>
