fix content and fix flexbox for vid add img

--- a/portfolio/jhw_portfolio/taxidermy.html
+++ b/portfolio/jhw_portfolio/taxidermy.html
@@ -36,6 +36,8 @@
         <h2 class="project-name-vid overview-accent-color-one">Knowledge Through Taxidermy (3:54)</h2>
         <h3 class="overview-subtitle">Role</h3>
         <p  class="overview-description">content strategist, storyboarding artist and graphic designer</p>
+        <h3 class="overview-subtitle">Caption</h3>
+        <p  class="overview-description">The video embedded is the final video.</p>
       </div>
 
       <div class="video-container overview-vid-item">
