--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -36,6 +36,8 @@
         <h2 class="project-name overview-accent-color-three">Neighbourhood House Poster</h2>
         <h3 class="overview-subtitle">Role</h3>
         <p  class="overview-description">Volunteer Graphic Designer</p>
+        <h3 class="overview-subtitle">Caption</h3>
+        <p  class="overview-description">The attached image is a representation of the final poster.</p>
       </div>
 
       <div class="overview-item">
@@ -55,6 +57,10 @@
     <h2 class="project-section-title">Brief</h2>
     <p class="project-paragraph first-paragraph">As an immigrant myself, I have strived to engage and assist new immigrants as well as international students. Thus, I volunteered at Frog Hollow Neighbourhood House which had several newcomer assistance programs that constantly hold community activities and events to involve them in the neighbourhood. Within the volunteer team, I mainly worked for their preteen and youth program and I would like to highlight the poster design for main summer community event.</p>
 
+    <figure>
+      <img src="image/communityTL-01.png" class="project-image" alt="my roles in making the trailer">
+      <figCaption>An overview of my roles in making the trailer.</figCaption>
+    </figure>
 
     <h2 class="project-section-title">Audience</h2>
     <p class="project-paragraph">The target audience was mainly preteen and young teenager. I conducted some quick search on what other designers did when they approached this audience base. Being influenced and inspired greatly by Paul Rand, I also did research on his style again to see how he handled elements and arranged them playfully. Afterwards, I started sketching and tested out a vibrant colour scheme for this specific audience. Sketches were then being brought into Illustrator.</p>
