--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -36,6 +36,8 @@
         <h2 class="project-name-vid overview-accent-color-four">VRVR Golf (3:06)</h2>
         <h3 class="overview-subtitle">Role</h3>
         <p  class="overview-description">Videographor</p>
+        <h3 class="overview-subtitle">Caption</h3>
+        <p  class="overview-description">The video embedded is the final video.</p>
       </div>
 
       <div class="video-container overview-vid-item">
@@ -56,11 +58,6 @@
     <p  class="project-paragraph">Tamiko Tadeo, Kenny Cheung and Liah Castillo</p>
     <h3 class="project-paragraph in-para-overview-title">Time</h3>
     <p  class="project-paragraph">5 days</p>
-    <h3 class="project-paragraph in-para-overview-title">Other Goals</h3>
-    <p  class="project-paragraph">Creating a casual VR golf game for people to relax themselves and experience futuristic golfing experience in 3.5 months.</p>
-    <h3 class="project-paragraph in-para-overview-title">Other Roles</h3>
-    <p  class="project-paragraph">sub environmental designer, asset modeller and user researcher.</p>
-
 
     <h2 class="project-section-title">Brief</h2>
     <p class="project-paragraph first-paragraph">This project was assigned in the course, <em>Immersive Environment</em> in which the student had to develop a virtual experience using the VR platform for the audience to feel a sense of high presence and engagement. Within this specific game project, one of my main roles was the videographer so that our VR experience can be documented for promoting VR technology.
@@ -102,14 +99,24 @@
 <figCaption>A screenshot of the crystal in the environment.</figCaption>
 </figure> -->
 
+<figure class="big-project-img">
+  <img src="image/vrTL-03.png" class="project-image" alt="my roles in making the trailer">
+  <figCaption>An overview of my roles in making the trailer.</figCaption>
+</figure>
 
-<h2 class="project-section-title">Process</h2>
+<figure class=" small-project-img">
+  <img src="image/vrTL-04.png" class="project-image" alt="my roles in making the trailer">
+  <figCaption>An overview of my roles in making the trailer.</figCaption>
+</figure>
+
+<h2 class="project-section-title">Communication</h2>
 <p class="project-paragraph">At almost the end of the project, there were only 5 days left for us to film a VR game trailer that demonstrated the overall experience.   I led a team discussion to discuss with the programmers on what features would be essential that had to be showcased.  They considered it would be the best if the trailer could focus on the game mechanics and dynamics since our game focused on smooth physics. In order to decrease the unpredictability and being able to film quickly, I outlined a simplified version of a shot list and a storyboard for myself.
 </p>
 
-<h2 class="project-section-title">Challenge</h2>
+<h2 class="project-section-title">Challenge of Having Time Constraint</h2>
 <p class="project-paragraph">However, due to the fact that the school computer that was powerful enough to run the VR game could not install any external recording software, my team had to rely on home desktops to record in-game footage. I asked our programmers to record the play-through since they knew how to set up the unity project efficiently. Meaningful communication was so important at this stage due to the time constraint. </p>
 
+<h2 class="project-section-title">Challenge of Filming Alone</h2>
 <p class="project-paragraph">
   Furthermore, I wanted to feature guest player footage in the trailer. Hence, the final showcase was included. The challenge was that every team member was occupied by other tasks and this meant that only me was able to film. It was difficult to manage everything at the same time with the presence of our guest players. Nevertheless, in order to minimize the chaos, I planned out beforehand Things turned out under control during the showcase.</p>
 
@@ -127,7 +134,7 @@
     <img src="image/VR_editing.png" class="project-image" alt="a screenshot of the me doing eidting and try to fix the footage">
     <figCaption>A screenshot of me editing.</figCaption>
   </figure>
-  
+
   <p class="project-paragraph">In the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer was embedded in our team website and our VR experience was also being introduced on <a href="https://bc.ctvnews.ca/video?clipId=1373354">CBC news</a> to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to achieve quality work. </p>
 
   <figure>
