fixing flexbox for overview and resize img

--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -36,6 +36,8 @@
         <h2 class="project-name overview-accent-color-two">New York Styled poster</h2>
         <h3 class="overview-subtitle">Role</h3>
         <p  class="overview-description">graphic designer and researcher</p>
+        <h3 class="overview-subtitle">Caption</h3>
+        <p  class="overview-description">The attached image is a breakdown of Paul Rand's style and my team's final poster.</p>
       </div>
 
       <div class="overview-item">
@@ -55,7 +57,9 @@
     <p class="project-paragraph ">1 month</p>
 
     <h2 class="project-section-title">Brief</h2>
-    <p class="project-paragraph first-paragraph">This project was an academic project for the course <em>Graphic Design</em>. Health had been a crucial topic. Hence, the instructor considered it might be a good idea for us to dive into health related topics. Since this course was an introductory graphic design course, in order to help us learn the basic design knowledge, we were asked to do research on different design styles during different areas. At the end, we were assigned to research on the New York school style and to be more specific, Paul Rand was being researched. </p>
+    <p class="project-paragraph first-paragraph">This project was an academic project from the course <em>Graphic Design</em>. Health had been a crucial topic. Hence, it was assigned as the main design domain. </p>
+
+    <p class="project-paragraph">Since this course was an introductory graphic design course, in order to help us learn the basic design knowledge, we were asked to do research on design styles in different eras. In the end, my team was assigned to research Paul Rand -- the iconic designer from New York School style. </p>
 
     <h2 class="project-section-title">Process</h2>
     <p class="project-paragraph">Before doing research, the team first decided to focus on the topic of healthy eating for this health related poster since this topic was more relevant to student community. After having this agreement, each of us splitted up to do individual research and observation on Paul Rand’s style. Most of us noticed the same things: Paul Rand’s liked to focus on solid and bold colours. Irregular blocky shapes and diagonal placement were also his style. Hence, the team splitted again to ideate new ideas based these observations.</p>
