--- a/portfolio/jhw_portfolio/taxidermy.html
+++ b/portfolio/jhw_portfolio/taxidermy.html
@@ -33,11 +33,11 @@
 
       <div class= "overview-vid-item">
         <h1 class="project-title-vid">&rsaquo; Videography </h1>
-        <h2 class="project-name-vid overview-accent-color-one">Knowledge Through Taxidermy (3:54)</h2>
+        <h2 class="project-name-vid overview-accent-color-one">Knowledge Through Taxidermy</h2>
         <h3 class="overview-subtitle">Role</h3>
         <p  class="overview-description">content strategist, storyboarding artist and graphic designer</p>
         <h3 class="overview-subtitle">Caption</h3>
-        <p  class="overview-description">The video embedded is the final video.</p>
+        <p  class="overview-description">The video embedded is 3 min 54sec in length.</p>
       </div>
 
       <div class="video-container overview-vid-item">
