--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -33,11 +33,11 @@
 
       <div class= "overview-vid-item">
         <h1 class="project-title-vid">&rsaquo; VR Trailer </h1>
-        <h2 class="project-name-vid overview-accent-color-four">VRVR Golf (3:06)</h2>
+        <h2 class="project-name-vid overview-accent-color-four">VRVR Golf</h2>
         <h3 class="overview-subtitle">Role</h3>
         <p  class="overview-description">Videographor</p>
         <h3 class="overview-subtitle">Caption</h3>
-        <p  class="overview-description">The video embedded is the final video.</p>
+        <p  class="overview-description">The video embedded is 3 min 6 sec in length .</p>
       </div>
 
       <div class="video-container overview-vid-item">
