--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -67,7 +67,7 @@
 
     <figure>
       <img src="image/community_sketch.jpg" class="project-image" alt="brainstorming image">
-      <figCaption>A photo of the brainstorming sketches that wanted to highlight the idea of the community is a friendly new homw for the newcomers.</figCaption>
+      <figCaption>A photo of the brainstorming sketches that wanted to highlight the idea of the community is a friendly new home for the newcomers.</figCaption>
     </figure>
 
     <h2 class="project-section-title">Content Structure and Communication</h2>
