--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -35,7 +35,7 @@
         <h1 class="project-title-vid">&rsaquo; VR Trailer </h1>
         <h2 class="project-name-vid overview-accent-color-four">VRVR Golf</h2>
         <h3 class="overview-subtitle">Role</h3>
-        <p  class="overview-description">Videographor</p>
+        <p  class="overview-description">Videographer</p>
         <h3 class="overview-subtitle">Caption</h3>
         <p  class="overview-description">The video embedded is 3 min 6 sec in length .</p>
       </div>
@@ -122,7 +122,7 @@
 
   <figure>
     <img src="image/VR_event_planning.png" class="project-image" alt="a screenshot of the event planning">
-    <figCaption>An image of the location planning. I planned out how the guest players would move through the showcase booth and place the cameras at approprate locations.</figCaption>
+    <figCaption>An image of the location planning. I planned out how the guest players would move through the showcase booth and place the cameras at appropriate locations.</figCaption>
   </figure>
   <figure>
     <img src="image/VR_filming.png" class="project-image" alt="a screenshot of the the close up shot I captured">
