--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -61,33 +61,40 @@
 
     <p class="project-paragraph">Since this course was an introductory graphic design course, in order to help us learn the basic design knowledge, we were asked to do research on design styles in different eras. In the end, my team was assigned to research Paul Rand -- the iconic designer from New York School style. </p>
 
-    <h2 class="project-section-title">Process</h2>
-    <p class="project-paragraph">Before doing research, the team first decided to focus on the topic of healthy eating for this health related poster since this topic was more relevant to student community. After having this agreement, each of us splitted up to do individual research and observation on Paul Rand’s style. Most of us noticed the same things: Paul Rand’s liked to focus on solid and bold colours. Irregular blocky shapes and diagonal placement were also his style. Hence, the team splitted again to ideate new ideas based these observations.</p>
+    <h2 class="project-section-title">Research and Observation</h2>
+    <p class="project-paragraph">Before doing research, the team first decided to focus on the topic of healthy eating since this topic was more relevant to the student community. Afterwards, each of us decided to do individual research and observation on Paul Rand’s style.</p>
 
     <figure>
       <img src="image/healthy_eating_research.png" class="project-image" alt="observation of Paul Rand's works">
       <figCaption>This is a synthesis of our observations on Paul Rand's style.</figCaption>
     </figure>
 
-    <h2 class="project-section-title">Challenge</h2>
-    <p class="project-paragraph">Unlike Annette who had design background, this was my first time learning about design and using Illustrator for design. I only had experiences in using Photoshop before for digital painting. Nonetheless, in order to achieve the sharp edges that Paul Rand always had since his signature style was colourful collages. There was not much time left for the project and we needed to come up with one finalized design before our next team meeting, I self learnt illustrator with my primary experiences of using photoshop. Although the I was not very familiar with Illustrator, I spent an afternoon learning all the basics and was able to design a rough poster for the team meeting. </p>
+    <h2 class="project-section-title">Learning New Tool</h2>
+    <p class="project-paragraph">Nevertheless, this was my first time using Illustrator. I only had experiences in using Photoshop for digital painting. Nonetheless, in order to achieve mimic Paul Rand's style-- colourful and sharp shape collages, I spent one afternoon to self-learnt Illustrator with assistance from Photoshop. </p>
+
+    <p class="project-paragraph">I then started brainstorming and brought the sketches into Illustrator. After each of us designing a draft, we brought the posters together and examine which one could be brought forward. </p>
+
+    <h2 class="project-section-title">Challenge in Merging Ideas</h2>
 
     <figure>
       <img src="image/healthy_eating_3design.png" class="project-image" alt="each team meber's designs">
-      <figCaption>Each of us brought our design to the meeting. Mine was the pink one with the diagonal fork directing the audience's attention to the message. </figCaption>
+      <figCaption>My poster was the pink one with the diagonal fork directing the audience's attention to the message. </figCaption>
     </figure>
 
-    <p class="project-paragraph">After each of us designing a poster, we brought the posters together and examine which one could be brought forward. Although we designed our own poster with the same guidelines, each of us had different interpretations on how to implement them. This situation led to a problem where it was hard to decide which poster should be chosen to carry on. In order to push the design process, I kindly asked other people to vote on three of our posters and my poster was chosen because people liked the colour contrast which made the poster memorable. Although my poster was chosen, I was willing to incorporate my teammates’ own interpretation of the style into my design. This incorporation included toning down the colour contrast and using yellow to highlight the advantages and the bright side of eating healthy.</p>
+    <p class="project-paragraph">Each of us had different interpretations on how to implement the style. This situation led to a problem where it was hard to decide which poster could be carried on. I took on the leadership and invited other students to vote on our posters and my poster was chosen because people saw the potentials and the colour contrast was similar to Paul Rand which made it memorable. </p>
+
+      <p class="project-paragraph">Although my poster was chosen, I was willing to incorporate my teammates’ interpretation of the style into my design. This incorporation included toning down the colour contrast and using yellow to lighten the mood.</p>
+
 
     <h2 class="project-section-title ">Reflection</h2>
-    <p class="project-paragraph">This project actually has influenced my design style and preference since then. It helped me to build the skills to design and refer to the best example before ideating. Able to observe and internalize the learnt knowledge was what I learnt which further assists me to adapt in unfamiliar design circumstances where would always research before breaking ground rules. </p>
+    <p class="project-paragraph">In the end, the project was successful and it actually has influenced my design preference. It helped me to build the design skills and learn to study from the best examples before ideating.</p>
 
     <figure>
       <img src="image/healthy_eating_final.png" class="project-image" alt="final versions">
       <figCaption>Left one was our final poster with less colour contrast and focusing on irregular organic shapes. Nevertheless, I am still so passionate about this project, the right one was refined again by me in my free time.</figCaption>
     </figure>
 
-    <p class="project-paragraph">Additionally, this project also taught me how to conduct effective communications with other people and how to create a more inclusive team. One of my teammates, Liam was not a very talkative person so it was always difficult for him to present his ideas in front of us. This project gave me the chance to discover different ways to approach this type of teammate including talking to him personally and encouraging him to talk in the meetings. </p>
+    <p class="project-paragraph">Additionally, this project also taught me how to create a more inclusive team. One of my teammates, Liam was not a very talkative person. This project gave me the chance to discover different ways to approach and encourage this type of teammate.</p>
   <footer>
     <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
   </footer>
