--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -74,7 +74,7 @@
 
 
     <footer>
-      <a href="#">RESUME</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
+      <a href="http://www.sfu.ca/~wangjarw/doc/resume/resume_jarhsuanwang.pdf">RESUME</a> | <a href="https://github.com/wangjarw/2018_portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
     </footer>
   </div>
 
