--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -96,7 +96,7 @@
 
     <p class="project-paragraph">Additionally, this project also taught me how to create a more inclusive team. One of my teammates, Liam was not a very talkative person. This project gave me the chance to discover different ways to approach and encourage this type of teammate.</p>
   <footer>
-    <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
+    <a href="http://www.sfu.ca/~wangjarw/doc/resume/resume_jarhsuanwang.pdf">RESUME</a> | <a href="https://github.com/wangjarw/2018_portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
   </footer>
 
 </body>
