fix figure caption and update sketches

--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -58,15 +58,15 @@
     <p class="project-paragraph first-paragraph">As an immigrant myself, I have strived to engage and assist new immigrants as well as international students. Thus, I volunteered at Frog Hollow Neighbourhood House which had several newcomer assistance programs that constantly hold community activities and events to involve them in the neighbourhood. Within the volunteer team, I mainly worked for their preteen and youth program and I would like to highlight the poster design for main summer community event.</p>
 
     <figure>
-      <img src="image/communityTL-01.png" class="project-image" alt="my roles in making the trailer">
-      <figCaption>An overview of my roles in making the trailer.</figCaption>
+      <img src="image/communityTL-01.png" class="project-image" alt="The lateral design process">
+      <figCaption>A process of making the poster.</figCaption>
     </figure>
 
     <h2 class="project-section-title">Audience</h2>
     <p class="project-paragraph">The target audience was mainly preteen and young teenager. I conducted some quick search on what other designers did when they approached this audience base. Being influenced and inspired greatly by Paul Rand, I also did research on his style again to see how he handled elements and arranged them playfully. Afterwards, I started sketching and tested out a vibrant colour scheme for this specific audience. Sketches were then being brought into Illustrator.</p>
 
     <figure>
-      <img src="image/community_sketch.jpg" class="project-image" alt="brainstorming image">
+      <img src="image/community_sketch.png" class="project-image" alt="brainstorming image">
       <figCaption>A photo of the brainstorming sketches that wanted to highlight the idea of the community is a friendly new home for the newcomers.</figCaption>
     </figure>
 
@@ -88,7 +88,7 @@
 
     <figure>
       <img src="image/community_final.png" class="project-image" alt="final version">
-      <figCaption>A screenshot of the final photo with more negative spaces for the audeince to breathe.</figCaption>
+      <figCaption>A screenshot of the final poster with more negative spaces for the audeince to breathe.</figCaption>
     </figure>
 
     <p class="project-paragraph">In the end, the poster was printed and posted in Anne Hebert Annex School. Because of this poster project’s success, other community program coordinators had asked me to help with their project promotions, including the career exploration day for the near Van Tech Secondary School. At the end of the year, I was awarded a certificate of recognition from the House of Common.</p>
