--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -64,13 +64,13 @@
     </p>
 
     <figure class="big-project-img">
-      <img src="image/vrTL-01.png" class="project-image" alt="a photo of our very first team meeting">
-      <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
+      <img src="image/vrTL-01.png" class="project-image" alt="a photo of my roles">
+      <figCaption>I had more than one role in this VR project. This is an overview.</figCaption>
     </figure>
 
     <figure class=" small-project-img">
-      <img src="image/vrTL-02.png" class="project-image" alt="a photo of our very first team meeting">
-      <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
+      <img src="image/vrTL-02.png" class="project-image" alt="a photo of my roles">
+      <figCaption>I had more than one role in this VR project. This is an overview.</figCaption>
     </figure>
 
 
