--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -72,6 +72,11 @@
     <h2 class="project-section-title">Learning New Tool</h2>
     <p class="project-paragraph">Nevertheless, this was my first time using Illustrator. I only had experiences in using Photoshop for digital painting. Nonetheless, in order to achieve mimic Paul Rand's style-- colourful and sharp shape collages, I spent one afternoon to self-learnt Illustrator with assistance from Photoshop. </p>
 
+    <figure>
+      <img src="image/healthy_eating_sketch.png" class="project-image" alt="some sketches for the poster">
+      <figCaption>A photo of the sketches.</figCaption>
+    </figure>
+
     <p class="project-paragraph">I then started brainstorming and brought the sketches into Illustrator. After each of us designing a draft, we brought the posters together and examine which one could be brought forward. </p>
 
     <h2 class="project-section-title">Challenge in Merging Ideas</h2>
