fixing unclosed tag

--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -100,6 +100,9 @@
     </figure>
 
     <p class="project-paragraph">Additionally, this project also taught me how to create a more inclusive team. One of my teammates, Liam was not a very talkative person. This project gave me the chance to discover different ways to approach and encourage this type of teammate.</p>
+
+</section>
+
   <footer>
     <a href="http://www.sfu.ca/~wangjarw/doc/resume/resume_jarhsuanwang.pdf">RESUME</a> | <a href="https://github.com/wangjarw/2018_portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
   </footer>
