refine the layout and content

--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -62,11 +62,27 @@
           </div>
         </a>
 
+        <a href="taxidermy.html" class="recent-project-item border-highlight-one">
+          <img src="image/project_taxidermy.png" class="recent-project-item-img" alt="documentary">
+          <div class="project-overlay"></div>
+          <div class="project-hover-text">
+            <p class="project-description">documentary</p>
+          </div>
+        </a>
+
         <a href="community_poster.html" class="recent-project-item border-highlight-three">
           <img src="image/community_poster.jpg" class="recent-project-item-img" alt="community poster">
           <div class="project-overlay"></div>
           <div class="project-hover-text">
             <p class="project-description">community poster design</p>
+          </div>
+        </a>
+
+        <a href="healthy_eating_poster.html" class="recent-project-item border-highlight-two">
+          <img src="image/healthy_eating_mockup.jpg" class="recent-project-item-img" alt="healthy eating poster">
+          <div class="project-overlay"></div>
+          <div class="project-hover-text">
+            <p class="project-description">healthy eating poster design</p>
           </div>
         </a>
       </div>
