--- a/portfolio/jhw_portfolio/about.html
+++ b/portfolio/jhw_portfolio/about.html
@@ -34,7 +34,7 @@
       <div class="about-item about-text">
         <img id="photo_one" src="image/photoTwo.jpg" alt="my photo">
         <h2>Bio</h2>
-        <p class="about-para">I am a visual designer and videographer with strength in <em class="intro-emphasis">print design and videography</em> using Adobe Creative Suites. Born with a Taiwanese background, I value the idea of multiculturalism. Hence, I have several design experiences with organizations and programs who mainly work with international newcomers. During the design process, I am interested in <em class="intro-emphasis">doing research, content strategy, storytelling through sketching or illustrations, storyboarding and project management</em>.
+        <p class="about-para">I am a visual designer and videographer with strengths in <em class="intro-emphasis">print design and videography</em> using Adobe Creative Suite. Born with a Taiwanese background, I value the idea of multiculturalism. Hence, I have several design experiences with organizations and programs who mainly work with international newcomers. During the design process, I am interested in <em class="intro-emphasis">doing research, content strategy, storytelling through sketching or illustrations, storyboarding and project management</em>.
         </p>
         <p class="about-para">My current goal is to learn more about UX/UI design, web design (HTML/CSS) and game design (Java and Unity) that can potentially enrich myself as a designer. <em class="intro-emphasis">This website (coded by me) is one of my first web design projects</em> and I am continuously learning more about this design field.
         </p>
