--- a/portfolio/jhw_portfolio/project_display.html
+++ b/portfolio/jhw_portfolio/project_display.html
@@ -66,7 +66,7 @@
         <img src="image/healthy_eating_mockup.jpg" class="project-item-img" alt="healthy eating poster">
         <div class="project-overlay">
           <div class="project-hover-text">
-            <p>healthy eating poster deisgn</p>
+            <p>healthy eating poster design</p>
           </div>
         </div>
       </a>
